[package]
name = "gensum"
version = "0.1.0"
authors = ["Arno Velds <a.velds@nki.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-htslib = "0.32"
nclist = "0.1.1"
anyhow = "1.0.27"
indexmap = "1.3.2"
clap = "2.33.0"
itoa = "0.4.5"
atoi = "0.3.2"
niffler = "2.2.0"
