[package]
name = "gensum"
version = "0.1.2"
authors = ["Arno Velds <a.velds@nki.nl>"]
edition = "2018"

[dependencies]
rust-htslib = "0.39"
nclist = "0.1.1"
anyhow = "1.0.27"
indexmap = "1.3.2"
clap = { version = "4.0.29", features = ["derive", "cargo"] }
itoa = "0.4.5"
atoi = "0.4.0"
niffler = "2.2.0"
itertools = "0.10.5"
